# ai-development-team

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  dev.sh  dev_setup.sh  docker-compose.yml  pyproject.toml  requirements.txt  run_app.sh  run_tests.sh  setup.py  setup.sh  test_auto_approve.py
.windsurf/: config.json
agent_core/: __init__.py
agent_core/agents/architect/: __init__.py  agent.py
agent_core/agents/developer/: __init__.py  agent.py
agent_core/agents/developer/templates/: __init__.py  python_module.py.j2
agent_core/agents/qa_engineer/: __init__.py
agent_core/agents/technical_writer/: __init__.py
agent_core/base/: __init__.py  agent.py  message.py  protocols.py
ai_development_team/: __init__.py
ai_development_team/core/: __init__.py  agent.py  generator.py  project.py  workflow.py
ai_development_team/interfaces/cli/: main.py
docs/: ai_agent_protocol.md  architecture.md  code_generator.md  development_agent.md  environment_setup.md  standards.md  technical_writer_agent.md
docs/prds/: hello_world_prd.md
examples/: README.md  basic_usage.py  template_example.py
interfaces/: __init__.py
interfaces/cli/: __init__.py  main.py
interfaces/cli/commands/: __init__.py  architect.py  qa.py
interfaces/cli/commands/technical_writer/: __init__.py
scripts/: check_compliance.py  check_environment.py  ensure_python.py  run_python.sh  venv_utils.py
tests/: __init__.py  conftest.py  test_agent.py  test_architect_agent.py  test_auto_approve.py  test_compliance.py  test_developer_agent.py  test_developer_agent_templates.py  test_environment.py  test_generator.py  test_qa_engineer_agent.py  test_technical_writer_agent.py
workflows/examples/: README.md  __init__.py  __main__.py  requirements_template.md
workflows/examples/templates/: README.md.j2  main.py.j2  pyproject.toml.j2  summary.md.j2
workflows/templates/: README.md.j2  __init__.py.j2  main.py.j2  pyproject.toml.j2  summary.md.j2
